css/wrap.css
#container{
    background-color: #f2f2f2 !important;
    font-family: sw_s;
}

.content_wrap{
    text-align: center;
    width: 100%;
    min-width: 1170px;
}

.content_category {
    position: sticky;
    left: 0;
    top: 0;
    width: 100%;
    min-width: 1170px;
    z-index: 3;
}
.content_category ul {
    font-size: 0;
}
.content_category::after{
    content: '';
    position: absolute;
    left: 0;
    bottom: 0;
    width: 100%;
    height: 1px;
    background-color: #fff;
    opacity: 0.1;
}
.content_category li {
    padding-left: 24px;
    margin-left: 21px;
    display: inline-block;
    position: relative;
}

.content_category li::after{
    content: '';
    width: 4px;
    height: 4px;
    background-color: #dddddd;
    border-radius: 30px;
    position: absolute;
    left: 0;
    top: 28px;
    opacity: 0.2;
}
.content_category li:first-child::after{
    display: none;
}

.content_category li a {
    text-decoration-line: none;
    color: white;
    font-family: 'noto_r';
    line-height:60px;
    font-size:16px;
    letter-spacing:-0.08em;
}


.content_category .active a {
    color: #ffce32 !important;
    display: block;
    position: relative;
}
.content_category .active a::after{
    content: '';
    position: absolute;
    background-color: #ffce32; 
    width: 100%;
    height: 4px;
    bottom: 0;
    left: 0;
}
.wrap {
    background-color: #85c441;
    width: 100%;
    min-width: 1170px;
    font-family: 'noto_m';
    height: 380px;
    text-align: center;
    color: #fff;
    overflow: hidden;
    position: relative;
}
.wrap .img1{
    position: absolute;
    left: 50%;
    margin-left: -818px;
    top: -200px;
    background: url(/images/menuinfo_images/wrap_n_others/img_visual_wrap02.jpg) no-repeat;
    width: 670px;
    height: 303px;
    opacity: 0;
}

.wrap .img2{
    position: absolute;
    left: 50%;
    margin-left: 292px;
    bottom: 0;
    background: url(/images/menuinfo_images/wrap_n_others/img_visual_wrap01.jpg) no-repeat;
    width: 416px;
    height: 308px;
    opacity: 0;
}

.wrap h2{
    font-size: 70px;
    font-family: 'sw_f';
    position: relative;
    z-index: 9;
    opacity: 0;
    top: 100px;
    margin-top: 60px;
    margin-bottom: 30px;
}

.wrap > p{
    font-family: 'noto_r';
    font-size: 16px;
    line-height: 26px;
    letter-spacing: -0.04em;
    position: relative;
    z-index: 9;
    opacity: 0;
    top: 100px;
}

.prod_tab{
    height: 140px;
    width: 1170px;
    margin: -40px auto 0;
    background: url(/images/menuinfo_images/Sandwich/bg_tabbox.png) no-repeat;
    position: relative;
}
.prod_tab li {
    display: inline-block;
    position: relative;
}
.prod_tab li a{
    font-family: 'noto_m';
    font-size: 16px;
    color: #666666;
    display: block;
    text-align: center;
    height: 80px;
    line-height: 80px;
    padding: 0 24px;
}
.prod_tab li a::after{
    content: '';
    position: absolute;
    left: 0;
    top: 33px;
    width: 1px;
    height: 15px;
    background-color: #dddddd; 
}

.prod_tab li:first-child a::after{
    display: none;
}
.prod_tab ul{
    font-size: 0;
}
.prod_tab .active a{
    color: #009223;
    font-family: 'noto_b';
}


.prod_list{
    width: 1170px;
    margin: 0 auto;
    padding-bottom: 130px;
}

.prod_list ul{
    margin: -30px 0 0 -30px;
}
.prod_list li{
    display: inline-block;
    width: 370px;
    height: 330px;
    background-color: #fff;
    overflow: hidden;
    text-align: center;
    position: relative;
    margin: 30px 0 0 21px;
}
.prod_list .prod_wrap_new .new_label{
    background-color: #ffc300;
    color: white;
    display: block;
    width: 70px;
    height: 30px;
    line-height: 30px;
    font-family: 'sw_f';
    font-size: 13px;
    margin-top: 10px;
    z-index: 3;
    position: absolute;
    left: 0;
    top: 0;
} 


.prod_list li .img{
    /* width: 270px;
    height: 189px;
    margin: 20px auto 0; */
    width: 270px;
    height: 189px;
    margin: 20px auto 0;
    position: relative;
    z-index: 1;
}

.prod_list li .img img{
    width: 100%;
    height: 100%;
    /* vertical-align: top; */
}

/* .prod_list li .summary{
    display: none;
} */

.prod_list li .title{
    /* color: #292929;
    font-family: 'noto_b';
    font-size: 22px; */
    color: #292929;
    font-size: 22px;
    font-family: 'noto_b';
    margin: 10px 0 7px;
    display: block;
    position: relative;
    z-index: 5;
    top: 0;
}


.prod_list li .eng{
    /* color: #666666;
    font-size: 16px;
    font-family: 'sw_s';
    font-weight: bold;
    display: block;
    margin: 0 0 15px;
    letter-spacing: -0.06em; */
    color: #666666;
    font-size: 16px;
    font-family: 'sw_s';
    display: block;
    margin: 0 0 13px;
    letter-spacing: -0.06em;
    position: relative;
    z-index: 5;
    top: 0;
}

.prod_list li .kcal{
    /* color: #ffc300;
    font-size: 18px;
    font-family: 'sw_f';
    display: block;
    letter-spacing: -0.05em; */
    color: #ffc300;
    font-size: 18px;
    font-family: 'sw_f';
    display: block;
    letter-spacing: -0.05em;
    z-index: 1;
}
.prod_list li .summary{
    position: absolute;
    left: 20px;
    right: 20px;
    top: 171px;
    opacity: 0;
    z-index: 5;
}
.prod_list li .summary p{
    color: #c5e698;
    font-size: 16px;
    letter-spacing: -0.05em;
    line-height: 24px;
    word-break: keep-all;
}
.prod_list li .btn_view{
    display: block;
    position: absolute;
    left: 0;
    top: 0;
    background: url(/images/menuinfo_images/icon_view.png) 147px bottom no-repeat;
    width: 100%;
    height: 100%;
    opacity: 0;
    z-index: 5;
    transform: scale(0.5);
}
.prod_list li::after{
    content: '';
    background-color: #009223;
    position: absolute;
    left: 0;
    width: 100%;
    top: 0;
    height: 100%;
    z-index: 9;
    opacity: 0;
    z-index: 3;
}
.prod_list li:hover .title{color:#fff; top:-159px; transition-duration:0.4s}
.prod_list li:hover .eng{color:#fff; top:-150px; transition-duration:0.4s;}
.prod_list li:hover .summary{opacity:1; top:135px; transition-duration:0.4s; transition-delay:0.2s}
.prod_list li:hover .btn_view{opacity:1; transform:scale(1); bottom:6px; transition-duration:0.3s; transition-delay:0.3s}
.prod_list li:hover:after{opacity:1; transition-duration:0.2s; }

